--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-toc-builder",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A lightweight React Table of Contents generator",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -22,6 +22,38 @@
     "babel-core": "^7.0.0-bridge.0",
     "rollup": "^3.0.0"
   },
-  "keywords": ["react", "toc", "table of contents", "html"],
+  "keywords": [
+    "react",
+    "toc",
+    "table-of-contents",
+    "table of contents",
+    "html",
+    "generator",
+    "navigation",
+    "sidebar",
+    "menu",
+    "outline",
+    "documentation",
+    "blog",
+    "content",
+    "markdown",
+    "headings",
+    "h2",
+    "h3",
+    "h4",
+    "h5",
+    "h6",
+    "collapsible",
+    "toggle",
+    "lightweight",
+    "component",
+    "library",
+    "npm",
+    "javascript",
+    "jsx",
+    "frontend",
+    "ui",
+    "widget"
+  ],
   "license": "MIT"
 }
