--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-toc-builder",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "A lightweight React Table of Contents generator",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -21,6 +21,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "rollup": "^3.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rakeshdhiman644/react-toc-builder.git"
+  },
+  "homepage": "https://github.com/rakeshdhiman644/react-toc-builder",
+  "bugs": {
+    "url": "https://github.com/rakeshdhiman644/react-toc-builder/issues"
   },
   "keywords": [
     "react",
