--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-toc-builder",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "A lightweight React Table of Contents generator",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "files": ["dist"],
+  "files": ["dist","demo"],
   "scripts": {
     "build": "rollup -c",
     "prepare": "npm run build"
