Add more keywords

--- a/package.json
+++ b/package.json
@@ -31,37 +31,44 @@
     "url": "https://github.com/rakeshdhiman644/react-toc-builder/issues"
   },
   "keywords": [
-    "react",
-    "toc",
-    "table-of-contents",
-    "table of contents",
-    "html",
-    "generator",
-    "navigation",
-    "sidebar",
-    "menu",
-    "outline",
-    "documentation",
-    "blog",
-    "content",
-    "markdown",
-    "headings",
-    "h2",
-    "h3",
-    "h4",
-    "h5",
-    "h6",
-    "collapsible",
-    "toggle",
-    "lightweight",
-    "component",
-    "library",
-    "npm",
-    "javascript",
-    "jsx",
-    "frontend",
-    "ui",
-    "widget"
-  ],
+  "react",
+  "toc",
+  "table-of-contents",
+  "table of contents",
+  "react toc",
+  "react table of contents",
+  "html",
+  "generator",
+  "navigation",
+  "sidebar",
+  "menu",
+  "outline",
+  "documentation",
+  "blog",
+  "content",
+  "markdown",
+  "headings",
+  "h2",
+  "h3",
+  "h4",
+  "h5",
+  "h6",
+  "collapsible",
+  "toggle",
+  "lightweight",
+  "component",
+  "library",
+  "npm",
+  "javascript",
+  "jsx",
+  "frontend",
+  "ui",
+  "widget",
+  "scrollspy",
+  "anchor links",
+  "auto toc",
+  "react plugin",
+  "react widget"
+],
   "license": "MIT"
 }
