--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "react-toc-builder",
-  "version": "1.0.11",
+  "version": "2.0.0",
   "description": "A lightweight React Table of Contents generator",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "files": ["dist","demo"],
+  "files": [
+    "dist",
+    "demo"
+  ],
   "scripts": {
     "build": "rollup -c",
     "prepare": "npm run build"
@@ -31,44 +34,44 @@
     "url": "https://github.com/rakeshdhiman644/react-toc-builder/issues"
   },
   "keywords": [
-  "react",
-  "toc",
-  "table-of-contents",
-  "table of contents",
-  "react toc",
-  "react table of contents",
-  "html",
-  "generator",
-  "navigation",
-  "sidebar",
-  "menu",
-  "outline",
-  "documentation",
-  "blog",
-  "content",
-  "markdown",
-  "headings",
-  "h2",
-  "h3",
-  "h4",
-  "h5",
-  "h6",
-  "collapsible",
-  "toggle",
-  "lightweight",
-  "component",
-  "library",
-  "npm",
-  "javascript",
-  "jsx",
-  "frontend",
-  "ui",
-  "widget",
-  "scrollspy",
-  "anchor links",
-  "auto toc",
-  "react plugin",
-  "react widget"
-],
+    "react",
+    "toc",
+    "table-of-contents",
+    "table of contents",
+    "react toc",
+    "react table of contents",
+    "html",
+    "generator",
+    "navigation",
+    "sidebar",
+    "menu",
+    "outline",
+    "documentation",
+    "blog",
+    "content",
+    "markdown",
+    "headings",
+    "h2",
+    "h3",
+    "h4",
+    "h5",
+    "h6",
+    "collapsible",
+    "toggle",
+    "lightweight",
+    "component",
+    "library",
+    "npm",
+    "javascript",
+    "jsx",
+    "frontend",
+    "ui",
+    "widget",
+    "scrollspy",
+    "anchor links",
+    "auto toc",
+    "react plugin",
+    "react widget"
+  ],
   "license": "MIT"
 }
